--- a/.gitmodules
+++ b/.gitmodules
@@ -307,3 +307,6 @@
 [submodule "pi22-3/tanya-pyzhyanova"]
 	path = pi22-3/tanya-pyzhyanova
 	url = https://github.com/Adrenaline22/tanya-pyzhyanova
+[submodule "7_TCP_server_1"]
+	path = 7_TCP_server_1
+	url = https://github.com/boikova2604/7_TCP_server_1
